--- a/new.html
+++ b/new.html
@@ -56,10 +56,10 @@
 				</section>
 
 				<section><h3></h3>
-					<pre><code src="" data-line-numbers="" style="overflow-x: hidden" data-trim data-noescape contenteditable class="csharp"></code></pre>
+					<pre><code src="" data-line-numbers=""></code></pre>
 				</section>
 				<section><h3></h3>
-					<pre><code data-line-numbers="" style="overflow-x: hidden" data-trim data-noescape contenteditable class="csharp"><script type="text/template">
+					<pre><code data-line-numbers=""><script type="text/template">
 					</script></code></pre>
 				</section>
 				<!-- ₽ -->
@@ -74,9 +74,6 @@
 				
 				<section data-markdown>
 					<textarea data-template>
-						``` csharp
-						```
-						<!-- .element style="width: 20em;" -->
 					</textarea>
 				</section>
 				
@@ -87,12 +84,13 @@
 							<div class="fragment" data-fragment-index="0">page 1 part 2</div>
 						</div>
 						<div class="fragment fade-in" data-fragment-index="1">
-							<div class="fragment fade-out" data-fragment-index="3">
+							<div class="fragment fade-out" data-fragment-index="10">
 								<div>page 2 part 1</div>
 								<div class="fragment" data-fragment-index="2">page 2 part 2</div>
+								<div class="fragment" data-fragment-index="3">page 2 part 3</div>
 							</div>
 						</div>
-						<div class="fragment current-visible" data-fragment-index="3">page 3</div>
+						<div class="fragment current-visible" data-fragment-index="10">page 3</div>
 						<div class="fragment current-visible">page 4</div>
 						<div class="fragment">
 							<div class="fragment" data-fragment-index="0">last page part 1</div>
