--- a/new.html
+++ b/new.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<title>C# | Title</title>
+		<title>ООП | Title</title>
 
 		<link rel="stylesheet" href="reveal/dist/reset.css">
 		<link rel="stylesheet" href="reveal/dist/reveal.css">
@@ -51,18 +52,21 @@
 					<h2>Title</h2>
 					<small style="margin-right:20%; margin-top: 5%; text-align: left;">
 						C# и .NET<br>Тимофеев Александр Алексеевич
+						ООП на С++<br>Тимофеев Александр Алексеевич
 					</small>
 					<!-- <a href="google.com" style="text-align: down;">Ссылка</a> -->
 				</section>
 
+				<!-- ₽ -->
 				<section><h3></h3>
 					<pre><code src="" data-line-numbers=""></code></pre>
 				</section>
+
 				<section><h3></h3>
 					<pre><code data-line-numbers=""><script type="text/template">
 					</script></code></pre>
 				</section>
-				<!-- ₽ -->
+				
 				<section><h3></h3>
 					<div class="r-stack">
 						<div class="fragment fade-out" data-fragment-index="0">
