--- a/new.html
+++ b/new.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="reveal/plugin/highlight/base_hl.css">
 	</head>
 	<body>
-		<div class="reveal" data-lang="csharp">
+		<div class="reveal" data-lang="csharp cpp">
 			<div class="slides">
 				<!-- remove -->
 				<section><h3>Test</h3>
@@ -59,15 +59,19 @@
 
 				<!-- ₽ -->
 				<section><h3></h3>
-					<pre><code src="" data-line-numbers=""></code></pre>
-				</section>
-
-				<section><h3></h3>
-					<pre><code data-line-numbers=""><script type="text/template">
-					</script></code></pre>
 				</section>
 				
 				<section><h3></h3>
+					<pre><code data-line-numbers=""><script type="text/template">
+					</script></code></pre>
+
+					<pre><code src="" data-line-numbers=""></code></pre>
+
+					<div data-markdown>
+						<textarea data-template>
+						</textarea>
+					</div>
+
 					<div class="r-stack">
 						<div class="fragment fade-out" data-fragment-index="0">
 						</div>
