--- a/new.html
+++ b/new.html
@@ -51,8 +51,9 @@
 				<section data-state="make-it-pop">
 					<h2>Title</h2>
 					<small style="margin-right:20%; margin-top: 5%; text-align: left;">
-						C# и .NET<br>Тимофеев Александр Алексеевич
-						ООП на С++<br>Тимофеев Александр Алексеевич
+						C# и .NET
+						ООП на С++
+						<br>Тимофеев Александр Алексеевич
 					</small>
 					<!-- <a href="google.com" style="text-align: down;">Ссылка</a> -->
 				</section>
@@ -67,10 +68,8 @@
 
 					<pre><code src="" data-line-numbers=""></code></pre>
 
-					<div data-markdown>
-						<textarea data-template>
-						</textarea>
-					</div>
+					<div data-markdown><textarea data-template>
+					</textarea></div>
 
 					<div class="r-stack">
 						<div class="fragment fade-out" data-fragment-index="0">
@@ -122,6 +121,7 @@
 			Reveal.initialize({
 				hash: true,
 				width: 1200,
+				transition: 'fade',
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes, RevealZoom ]
