--- a/new.html
+++ b/new.html
@@ -66,7 +66,7 @@
 					<pre><code data-line-numbers=""><script type="text/template">
 					</script></code></pre>
 
-					<pre><code src="" data-line-numbers=""></code></pre>
+					<pre><code src="" src-data="" data-line-numbers=""></code></pre>
 
 					<div data-markdown><textarea data-template>
 					</textarea></div>
