add after src + props

--- a/new.html
+++ b/new.html
@@ -4,8 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>C# | Title</title>
-		<title>ООП | Title</title>
+		<title>Title</title>
 
 		<link rel="stylesheet" href="reveal/dist/reset.css">
 		<link rel="stylesheet" href="reveal/dist/reveal.css">
@@ -16,44 +15,12 @@
 		<link rel="stylesheet" href="reveal/plugin/highlight/base_hl.css">
 	</head>
 	<body>
-		<div class="reveal" data-lang="csharp cpp">
+		<div class="reveal">
 			<div class="slides">
-				<!-- remove -->
-				<section><h3>Test</h3>
-					<pre><code src="files/test.cc" data-line-numbers=""><script type="text/template">
-						// come code
-					</script></code></pre>
-					<div>
-						<error>some error desc</error><br>
-						<warning>some warning of program</warning>
-						<p>In test <c>tag</c> code</p>
-					</div>
-				</section>
-				<section data-markdown>
-					<textarea data-template>
-						### Markdown преимущества
-						- something with `code`
-						- or with my <c>tag</c>
-						- try <i>italic</i>
-						- try **bold**
-						``` csharp [1-2]
-						public static void Mait(string[] attr){
-							Console.WriteLine("hello ", 10);
-						}
-						```
-
-						<warning>in md</warning>
-						
-						<error>in md</error>
-					</textarea>
-				</section>
-				<!-- remove -->
 				<section data-state="make-it-pop">
 					<h2>Title</h2>
-					<small style="margin-right:20%; margin-top: 5%; text-align: left;">
-						C# и .NET
-						ООП на С++
-						<br>Тимофеев Александр Алексеевич
+					<small name="autor" style="margin-right:20%; margin-top: 5%; text-align: left;">
+						Тимофеев Александр Алексеевич
 					</small>
 					<!-- <a href="google.com" style="text-align: down;">Ссылка</a> -->
 				</section>
