--- a/new.html
+++ b/new.html
@@ -44,6 +44,13 @@
 						<div class="fragment current-visible" data-fragment-index="0">
 						</div>
 					</div>
+
+					<div class="r-hstack">
+						<div class="h-mar">
+						</div>
+						<div class="h-mar">
+						</div>
+					</div>
 				</section>
 				
 				<section data-markdown>
