--- a/new.html
+++ b/new.html
@@ -46,9 +46,9 @@
 					</div>
 
 					<div class="r-hstack">
-						<div class="h-mar">
+						<div class="h-mar h-mar-r1">
 						</div>
-						<div class="h-mar">
+						<div class="h-mar h-mar-l1">
 						</div>
 					</div>
 				</section>
@@ -79,6 +79,7 @@
 						</div>
 					</div>
 				</section>
+			</div>
 		</div>
 
 		<script src="reveal/fill-codes.js"></script>
