--- a/new.html
+++ b/new.html
@@ -19,7 +19,7 @@
 			<div class="slides">
 				<section data-state="make-it-pop">
 					<h2>Title</h2>
-					<small name="autor" style="margin-right:20%; margin-top: 5%; text-align: left;">
+					<small name="autor">
 						Тимофеев Александр Алексеевич
 					</small>
 					<!-- <a href="google.com" style="text-align: down;">Ссылка</a> -->
