--- a/new.html
+++ b/new.html
@@ -33,7 +33,7 @@
 					<pre><code data-line-numbers=""><script type="text/template">
 					</script></code></pre>
 
-					<pre><code src="" src-data="" data-line-numbers=""></code></pre>
+					<pre><code src="files" src-data="" data-line-numbers=""></code></pre>
 
 					<div data-markdown><textarea data-template>
 					</textarea></div>
@@ -53,6 +53,8 @@
 					</div>
 				</section>
 				
+				<section data-markdown=""></section>
+
 				<section data-markdown>
 					<textarea data-template>
 					</textarea>
