add templates with jQuery

--- a/new.html
+++ b/new.html
@@ -13,6 +13,10 @@
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="reveal/plugin/highlight/base_hl.css">
+
+		<!-- Templates -->
+		<script src="reveal/jquery-3.7.1.min.js"></script>
+		<script src="reveal/templates.js"></script>
 	</head>
 	<body>
 		<div class="reveal">
