--- a/new.html
+++ b/new.html
@@ -9,7 +9,8 @@
 		<link rel="stylesheet" href="reveal/dist/reset.css">
 		<link rel="stylesheet" href="reveal/dist/reveal.css">
 		<!-- <link rel="stylesheet" href="reveal/dist/theme/_white-personel.css"> -->
-		<link rel="stylesheet" href="reveal/dist/theme/_sky-personel.css">
+		<link rel="stylesheet" href="reveal/dist/theme/skypersonel.css">
+		<!-- <link rel="stylesheet" href="reveal/dist/theme/_sky-personel.css"> -->
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="reveal/plugin/highlight/base_hl.css">
